analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/functionAsAnnotationArgument.kt
annotation class Anno(val i: Int)

@Anno(i = <expr>fun foo() = 1</expr>)
abstract class Check {
    abstract var prop: Int
}